# makenv

./: LICENSE  README.md  pyproject.toml
makenv/: __init__.py  environment.yml
prepenv/: __init__.py
