[project]
name = "prepenv"
version = "1.0.1"
description = "Prepares a standard data science environment for me"
authors = [{name = "Benoit Hamelin", email = "benoit@benoithamelin.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independant"
]
dependencies = [
    "pyyaml"
]

[project.urls]
"Homepage" = "https://github.com/hamelin/prepenv"

[project.scripts]
prepenv = "prepenv:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = {"prepenv" = ["environment.yml"]}
